tests/ui/macros/issue-26094.stderr
error[E0061]: this function takes 0 arguments but 1 argument was supplied
  --> $DIR/issue-26094.rs:10:17
   |
LL |         $other(None)
   |                ----
   |                |
   |                unexpected argument of type `Option<_>`
   |                help: remove the extra argument
...
LL |     some_macro!(some_function);
   |                 ^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/issue-26094.rs:7:4
   |
LL | fn some_function() {}
   |    ^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0061`.
